# mcp_demo

./: .gitignore  README.md  client.py  pyproject.toml  server.py
